--- a/.gitignore
+++ b/.gitignore
@@ -137,7 +137,7 @@ DocProject/Help/html
 
 # Click-Once directory
 publish/
-
+Properties/PublishProfiles
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
