--- a/getdelays.be/getdelays.be.csproj
+++ b/getdelays.be/getdelays.be.csproj
@@ -144,6 +144,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ConnectionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\StationController.cs" />
     <Compile Include="Controllers\TrainController.cs" />
     <Compile Include="Global.asax.cs">
@@ -160,6 +161,10 @@
     <Compile Include="Migrations\201806162120327_addRepaetAttribute.cs" />
     <Compile Include="Migrations\201806162120327_addRepaetAttribute.Designer.cs">
       <DependentUpon>201806162120327_addRepaetAttribute.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201806171428110_AddingUsers.cs" />
+    <Compile Include="Migrations\201806171428110_AddingUsers.Designer.cs">
+      <DependentUpon>201806171428110_AddingUsers.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\DAL\Context.cs" />
@@ -187,6 +192,8 @@
     <Content Include="Views\Shared\error.cshtml" />
     <Content Include="Views\Connection\SearchConnection.cshtml" />
     <Content Include="Views\Connection\GetConnection.cshtml" />
+    <Content Include="Views\Login\Index.cshtml" />
+    <Content Include="Views\Login\Profil.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -220,6 +227,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806162120327_addRepaetAttribute.resx">
       <DependentUpon>201806162120327_addRepaetAttribute.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806171428110_AddingUsers.resx">
+      <DependentUpon>201806171428110_AddingUsers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
