--- a/getdelays.be/getdelays.be.csproj
+++ b/getdelays.be/getdelays.be.csproj
@@ -143,8 +143,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ConnectionController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\ProfilController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\StationController.cs" />
     <Compile Include="Controllers\TrainController.cs" />
     <Compile Include="Global.asax.cs">
@@ -200,10 +199,10 @@
     <Content Include="Views\Shared\error.cshtml" />
     <Content Include="Views\Connection\SearchConnection.cshtml" />
     <Content Include="Views\Connection\GetConnection.cshtml" />
-    <Content Include="Views\Login\Index.cshtml" />
-    <Content Include="Views\Login\CreateAccount.cshtml" />
-    <Content Include="Views\Profil\Index.cshtml" />
-    <Content Include="Views\Profil\MakeChangeInformation.cshtml" />
+    <Content Include="Views\User\Login.cshtml" />
+    <Content Include="Views\User\CreateAccount.cshtml" />
+    <Content Include="Views\User\Index.cshtml" />
+    <Content Include="Views\User\MakeChangeInformation.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
