--- a/APIDelays/Web.config
+++ b/APIDelays/Web.config
@@ -15,6 +15,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors defaultRedirect="url" mode="Off">
+      <error statusCode="500" redirect="InternalError.htm"/>
+    </customErrors>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
