a lot of work done

--- a/getdelays.be/getdelays.be.csproj
+++ b/getdelays.be/getdelays.be.csproj
@@ -199,6 +199,7 @@
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\MakeChangeInformation.cshtml" />
     <Content Include="Views\User\Notification.cshtml" />
+    <Content Include="Views\Connection\GetConnectionTime.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
